# c-polygonid

./: .gitignore  Makefile  README.md  StateV2.go  aadhaar.go  aadhaar_test.go  attestation.go  attestation_test.go  auth.go  auth_test.go  badger_cache_engine.go  badger_cache_engine_test.go  bjj.go  bjj_test.go  build-ios.sh  cache.go  cache_test.go  caching_rev_status_resolver.go  caching_rev_status_resolver_test.go  clangwrap.sh  credential_status.go  credential_status_test.go  document_loader.go  env_config.go  env_config_test.go  errors.go  go.mod  go.sum  iden3comm_packer.go  iden3comm_packer_test.go  inputs_sig.go  inputs_sig_test.go  ipfs_cli.go  ipfs_cli_test.go  main_test.go  method_config.go  method_config_test.go  mt_storage.go  mt_storage_test.go  number.go  (+7 more)
.github/workflows/: lint.yaml  tests-c.yaml  tests.yaml
cmd/polygonid/: polygonid.go  polygonid_test.go
examples/: CMakeLists.txt  auth_v2_inputs.c  auth_v2_inputs_in.json  auth_v2_inputs_out.json  calculate_genesis_id.c  calculate_genesis_id_in.json  calculate_genesis_id_out.json  common.h  create_claim.c  create_claim_all_fields_2_out.json  create_claim_out.json  json_functions_status_tests.c  json_functions_tests.c  schema.json  test.c
examples/testdata/: anon_aadhaar_v1_inputs_invalid_signature_non_pub_key.json  auth_v2_inputs_in.json  auth_v2_inputs_out.json  calculate_genesis_id_out.json  create_claim_all_fields_1_in.json  create_claim_all_fields_1_out.json  create_claim_all_fields_2_in.json  create_claim_in.json  id_to_int_in.json  id_to_int_out.json  mtp_on_chain_in.json  new_genesis_id_cfg.json  new_genesis_id_from_eth_in.json  new_genesis_id_from_eth_out.json  new_genesis_id_in.json  new_genesis_id_out.json  profile_id_in.json  profile_id_out.json  proof_from_smart_contract_in.json  proof_from_smart_contract_out.json  sig_on_chain_in.json  sig_v2_inputs_out.json
testdata/: anon_aadhaar_invalid_qr.json  anon_aadhaar_invalid_qr_version.json  anon_aadhaar_v1_inputs.json  anon_aadhaar_v1_inputs_invalid_signature.json  anon_aadhaar_v1_inputs_time_now.json  anon_aadhaar_v1_output.json  anon_aadhaar_valid_qr.json  anon_pack_inputs.json  anon_pack_inputs_multi.json  atomic_query_mtp_v2_expired_inputs.json  atomic_query_mtp_v2_inputs.json  atomic_query_mtp_v2_non_merklized_disclosure_inputs.json  atomic_query_mtp_v2_non_merklized_inputs.json  atomic_query_mtp_v2_non_merklized_output.json  atomic_query_mtp_v2_on_chain_input.json  atomic_query_mtp_v2_on_chain_output.json  atomic_query_mtp_v2_on_chain_status_inputs.json  atomic_query_mtp_v2_on_chain_status_output.json  atomic_query_mtp_v2_onchain_inputs.json  atomic_query_mtp_v2_output.json  atomic_query_sig_v2_2_inputs.json  atomic_query_sig_v2_2_output.json  atomic_query_sig_v2_4_output.json  atomic_query_sig_v2_inputs.json  atomic_query_sig_v2_ipfs_inputs.json  atomic_query_sig_v2_merklized_disclosure_inputs.json  atomic_query_sig_v2_merklized_expired_inputs.json  atomic_query_sig_v2_merklized_inputs.json  atomic_query_sig_v2_merklized_ipfs_inputs.json  atomic_query_sig_v2_merklized_noop_inputs.json  atomic_query_sig_v2_merklized_noop_output.json  atomic_query_sig_v2_merklized_output.json  atomic_query_sig_v2_merklized_revoked_inputs.json  atomic_query_sig_v2_merklized_rhs_inputs.json  atomic_query_sig_v2_merklized_rhs_nonempty_output.json  atomic_query_sig_v2_merklized_rhs_output.json  atomic_query_sig_v2_merklized_rhs_revoked_inputs.json  atomic_query_sig_v2_merklized_skip_revocation_check_inputs.json  atomic_query_sig_v2_merklized_skip_revocation_check_output.json  atomic_query_sig_v2_nested_selective_disclosure_inputs.json  (+117 more)
testdata/keys/: alice_private_key_ec_set_only.json  alice_private_key_rsa_set_only.json  alice_private_key_set.json  bob_private_key_ec_set_only.json  bob_private_key_rsa_set_only.json  bob_private_key_set.json  (+3 more)
testing/: http.go
(+10 files in other folders)
